6.0.2
FIXES
    - Set actionbar 1 to always have 12 buttons

6.0.1
FIXES
    - Fix lua error on login

6.0.0
    - Update for 10.0.2

5.31.7
FIXES
    - Fix a classpower anchor issue if the classpower is moved

5.31.6
FIXES
    - Fix a bug in move hud mode which sets a wrong paramter if a frame was moved
    - Adjust classpower bars to fit with the mover
    - Fix ember court memory leak

5.31.5
FIXES
    - Player castingbar issue

5.31.4
FIXES
    - Do not delete profile names on profile resets

5.31.3
FIXES
    - Do not delete profile names on profile resets

MISC
    - Profile frame tweaks
    - Inspection frame tweaks

5.31.2
FIXES
    It could happen, that some frames after 2 or more reloads automaticly moves one pixel out of there default position.
    That causes that eg. the automaticly player buff/debuff positions was not changed if the right actionbar was set to show on hower.

    To fix this: Open the Move HUD mode and reset the effected frames to there default position (right click the mover and click on Reset).
    After that do a /reload

5.31.1
FIXES
    - Fix wrong position of inverted target frame background

5.31.0
NEW
    - Added 'Layouts':
        - You can now create, save and edit differente movable frame layouts and assing them to a spec.
        - This layouts will be automaticly activated by a spec switch
        Notes: The current profile layout will be saved as a new layout and works always a default, if no spec layout was found
    - Added an option to change the position of the tooltip healtbar: Bottom, Top, Disable
    - Added new backgrounds for the immersive questing module

FIXES
    - Fix some bugs related to the immersive questing module

MISC
    - Redo the GW2 profile page and allow unlimited profiles
    - Some tweaks to the immersive questing module

5.30.2
FIXES
    - Fix a extended vendor issue

5.30.1
FIXES
    - Fix a profile lua error

5.30.0
NEW
    - Extended Vendor (default disabled)

FIXES